feat: add adaptive multimodal video understanding
- replace low-resolution frame extraction with adaptive full-timeline sampling
- add stable-frame selection, pre-OCR budgets, bounded OCR and VLM budgets
- support multimodal and visual-only course analysis
- add evidence lifecycle, learning outputs and visual evidence UI
- add V19/V20 migrations and full regression coverage